# libftd2xx-wrap

./: CMakeLists.txt  ftdi.c  ftdi.def  ftdi.h
